the boid follows the mouse coords

--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@testing-library/user-event": "^13.5.0",
     "lodash": "^4.17.21",
     "node-uuid": "^1.4.8",
+    "p5": "^1.6.0",
     "performance-now": "^2.1.0",
     "raf": "^3.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "vector": "^0.0.4",
     "web-vitals": "^2.1.4",
     "xstream": "^11.14.0"
   },
